--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tasca de l'especialització 1_Danilly</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
+
 <body>
     <div class="box" id="box-1">
         <p class="button" id="button-logo">.logo</p>
@@ -17,7 +19,25 @@
         <h1 class="button" id="button-banner">.banner</h1>
     </div>
 
-    <div></div>
+    <div id="boxes-together">
+        <div class="box" id="box-3">
+            <p class="button-article">.article</p>
+            <p class="button-article">.article</p>
+            <p class="button-article">.article</p>
+            <p class="button-article">.article</p>
+            <p class="button" id="button-navegacion">.navegacion</p>
+        </div>
+
+        <div class="box" id="box-4">
+            <p class="button-publicidad">.publicidad</p>
+            <p class="button-publicidad">.publicidad</p>            
+        </div>
+    </div>
+
+    <div class="box" id="box-5">
+        <p>.pie</p>
+    </div>
 
 </body>
+
 </html>
